--- a/index.html
+++ b/index.html
@@ -430,11 +430,54 @@
          </p>
         </div>
        </div>
-       <div class="elementor-element elementor-element-88a3775 elementor-widget elementor-widget-image" data-element_type="widget" data-id="88a3775" data-widget_type="image.default" style="
-                                  margin-top: 7.5em;
-                              ">
+      </div>
+     </div>
+    </div>
+   </section>
+   <section class="elementor-section elementor-top-section elementor-element elementor-element-97711db elementor-hidden-desktop elementor-hidden-tablet elementor-section-full_width elementor-section-height-min-height elementor-section-height-default elementor-section-items-middle" data-element_type="section" data-id="97711db" data-marvy_enable_drop_animation="false" data-marvy_enable_fancy_rotate="false" data-marvy_enable_firework_animation="false" data-marvy_enable_flying_object="false" data-marvy_enable_gradient_animation="false" data-marvy_enable_rings_animation="false" data-marvy_enable_ripples_animation="false" data-marvy_enable_snow_animation="false" data-marvy_enable_topology_animation="false" data-marvy_enable_waves_animation="false" data-particle-mobile-disabled="false" data-particle_enable="false">
+    <div class="elementor-background-overlay">
+    </div>
+    <div class="elementor-container elementor-column-gap-no">
+     <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-6aac721" data-element_type="column" data-id="6aac721">
+      <div class="elementor-widget-wrap elementor-element-populated">
+       <div class="elementor-element elementor-element-7649380 elementor-view-default elementor-widget elementor-widget-icon animated shake" data-element_type="widget" data-id="7649380" data-settings='{"_animation_mobile":"shake"}' data-widget_type="icon.default">
         <div class="elementor-widget-container">
-         <img alt="" class="attachment-large size-large wp-image-3086" decoding="async" height="399" loading="lazy" sizes="(max-width: 600px) 100vw, 600px" srcset="imagenes/10.png" width="600"/>
+         <div class="elementor-icon-wrapper">
+          <div class="elementor-icon">
+           <i aria-hidden="true" class="icon icon-paper-plane-empty">
+           </i>
+          </div>
+         </div>
+        </div>
+       </div>
+       <div class="elementor-element elementor-element-90b04da elementor-widget elementor-widget-heading" data-element_type="widget" data-id="90b04da" data-widget_type="heading.default">
+        <div class="elementor-widget-container">
+         <h2 class="elementor-heading-title elementor-size-default">
+          Rogamos confirmar asistencia
+         </h2>
+        </div>
+       </div>
+       <div class="elementor-element elementor-element-5e3a885 elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="5e3a885" data-widget_type="text-editor.default">
+        <div class="elementor-widget-container">
+         ¡Ojalá contemos contigo!.
+         <br/>
+         Te pedimos que rellenes el formulario y pulses el botón así nos ayudas a contabilizarlo.
+        </div>
+        <div class="elementor-widget-container">
+         <br/>
+        </div>
+       </div>
+       <div class="elementor-element elementor-element-23b9067b elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button animated bounceIn" data-element_type="widget" data-id="23b9067b" data-settings='{"_animation_mobile":"bounceIn"}' data-widget_type="button.default">
+        <div class="elementor-widget-container">
+         <div class="elementor-button-wrapper">
+          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://forms.gle/vpsSGWtxfRS1bVKs8" role="button" target="_blank">
+           <span class="elementor-button-content-wrapper">
+            <span class="elementor-button-text">
+             Ir al formulario
+            </span>
+           </span>
+          </a>
+         </div>
         </div>
        </div>
       </div>
@@ -445,7 +488,7 @@
     <div class="elementor-background-overlay">
     </div>
     <div class="elementor-container elementor-column-gap-no" style="
-                        margin-top: -8em;
+                        margin-top: -6em;
                     ">
      <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-78c83bb" data-element_type="column" data-id="78c83bb" data-settings='{"background_background":"classic"}'>
       <div class="elementor-widget-wrap elementor-element-populated">
@@ -509,7 +552,7 @@
       <div class="elementor-widget-wrap elementor-element-populated">
        <div class="elementor-element elementor-element-9b25032 elementor-align-center elementor-widget elementor-widget-lottie" data-element_type="widget" data-id="9b25032" data-settings='{"source_json":{"url":"","id":2735,"size":"","alt":"","source":"library"},"loop":"yes","source":"media_file","caption_source":"none","link_to":"none","trigger":"arriving_to_viewport","viewport":{"unit":"%","size":"","sizes":{"start":0,"end":100}},"play_speed":{"unit":"px","size":1,"sizes":[]},"start_point":{"unit":"%","size":"0","sizes":[]},"end_point":{"unit":"%","size":"100","sizes":[]},"renderer":"svg"}' data-widget_type="lottie.default">
         <div class="elementor-widget-container" style="
-                        margin-top: 0px;
+                        margin-top: 2em;
                     ">
          <style>
           .e-lottie__container{display:inline-block;max-width:var(--lottie-container-max-width);width:var(--lottie-container-width);opacity:var(--lottie-container-opacity)}.e-lottie__container:hover{opacity:var(--lottie-container-opacity-hover);-webkit-transition-duration:var(--lottie-container-transition-duration-hover);-o-transition-duration:var(--lottie-container-transition-duration-hover);transition-duration:var(--lottie-container-transition-duration-hover)}.e-lottie__container svg,.e-lottie__container svg *{-webkit-transition:none!important;-o-transition:none!important;transition:none!important}.e-lottie__caption{color:var(--caption-color);margin-top:var(--caption-margin-top);text-align:var(--caption-text-align)}
@@ -653,11 +696,11 @@
           <b>
            HABITACIONES DOBLES:
           </b>
-          79€ la noche solo alojamiento</br>
+          79€ la noche solo alojamiento
           <b>
            HABITACIÓN CUÁDRUPLE:
           </b>
-          149€ la noche solo alojamiento</br>
+          149€ la noche solo alojamiento
           <b>
            HABITACIÓN JUNIOR SUITE:
           </b>
@@ -1210,56 +1253,6 @@
            </span>
           </span>
          </p>
-        </div>
-       </div>
-      </div>
-     </div>
-    </div>
-   </section>
-   <section class="elementor-section elementor-top-section elementor-element elementor-element-97711db elementor-hidden-desktop elementor-hidden-tablet elementor-section-full_width elementor-section-height-min-height elementor-section-height-default elementor-section-items-middle" data-element_type="section" data-id="97711db" data-marvy_enable_drop_animation="false" data-marvy_enable_fancy_rotate="false" data-marvy_enable_firework_animation="false" data-marvy_enable_flying_object="false" data-marvy_enable_gradient_animation="false" data-marvy_enable_rings_animation="false" data-marvy_enable_ripples_animation="false" data-marvy_enable_snow_animation="false" data-marvy_enable_topology_animation="false" data-marvy_enable_waves_animation="false" data-particle-mobile-disabled="false" data-particle_enable="false">
-    <div class="elementor-background-overlay">
-    </div>
-    <div class="elementor-container elementor-column-gap-no">
-     <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-6aac721" data-element_type="column" data-id="6aac721">
-      <div class="elementor-widget-wrap elementor-element-populated">
-       <div class="elementor-element elementor-element-7649380 elementor-view-default elementor-widget elementor-widget-icon animated shake" data-element_type="widget" data-id="7649380" data-settings='{"_animation_mobile":"shake"}' data-widget_type="icon.default">
-        <div class="elementor-widget-container">
-         <div class="elementor-icon-wrapper">
-          <div class="elementor-icon">
-           <i aria-hidden="true" class="icon icon-paper-plane-empty">
-           </i>
-          </div>
-         </div>
-        </div>
-       </div>
-       <div class="elementor-element elementor-element-90b04da elementor-widget elementor-widget-heading" data-element_type="widget" data-id="90b04da" data-widget_type="heading.default">
-        <div class="elementor-widget-container">
-         <h2 class="elementor-heading-title elementor-size-default">
-          Rogamos confirmar asistencia
-         </h2>
-        </div>
-       </div>
-       <div class="elementor-element elementor-element-5e3a885 elementor-widget elementor-widget-text-editor" data-element_type="widget" data-id="5e3a885" data-widget_type="text-editor.default">
-        <div class="elementor-widget-container">
-         ¡Ojalá contemos contigo!.
-         <br/>
-         Te pedimos que rellenes el formulario y pulses el botón así nos ayudas a contabilizarlo.
-        </div>
-        <div class="elementor-widget-container">
-         <br/>
-        </div>
-       </div>
-       <div class="elementor-element elementor-element-23b9067b elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button animated bounceIn" data-element_type="widget" data-id="23b9067b" data-settings='{"_animation_mobile":"bounceIn"}' data-widget_type="button.default">
-        <div class="elementor-widget-container">
-         <div class="elementor-button-wrapper">
-          <a class="elementor-button-link elementor-button elementor-size-sm" href="https://forms.gle/vpsSGWtxfRS1bVKs8" role="button" target="_blank">
-           <span class="elementor-button-content-wrapper">
-            <span class="elementor-button-text">
-             Ir al formulario
-            </span>
-           </span>
-          </a>
-         </div>
         </div>
        </div>
       </div>
