--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
           Queremos que solo
           <span class="Apple-converted-space">
           </span>
-          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles a la celebración.
+          os preocupéis en pasarlo bien, así que tenéis a vuestra disposición autobuses que os trasladarán de los hoteles a la celebración.</br>
           <b>
            Itinerario de recogida:
           </b>
@@ -640,7 +640,7 @@
            <b>
             Tarifa dia
            </b>
-           : Hacienda Minerva 20€, Hotel Nueva Mencía Subética 15€
+           : Hacienda Minerva 20€, Hotel Nueva Mencía Subética 15€ </br>
            <b>
             Tarifa noche:
            </b>
@@ -696,11 +696,11 @@
           <b>
            HABITACIONES DOBLES:
           </b>
-          79€ la noche solo alojamiento
+          79€ la noche solo alojamiento</br>
           <b>
            HABITACIÓN CUÁDRUPLE:
           </b>
-          149€ la noche solo alojamiento
+          149€ la noche solo alojamiento</br>
           <b>
            HABITACIÓN JUNIOR SUITE:
           </b>
