--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
           <a class="elementor-button-link elementor-button elementor-size-sm" href="https://maps.app.goo.gl/3S6Q2LMVGK676icy5?g_st=iw" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
-            Mesón del Monte 
+            Ver ubicación
             </span>
            </span>
           </a>
@@ -558,7 +558,7 @@
           <a class="elementor-button-link elementor-button elementor-size-sm" href="https://maps.app.goo.gl/3oVFDK1mpdFZPS1F6?g_st=iw" role="button" target="_blank">
            <span class="elementor-button-content-wrapper">
             <span class="elementor-button-text">
-             Parking
+            Ubicación parking
             </span>
            </span>
           </a>
